# organismic-latent-flow

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  abstraction_unseen.py  affordance_gap.py  base.py  code_body.py  code_body_real.py  context_flip.py  delayed_lure.py  negative_control.py  randomized_consequence.py  role_transformation.py  self_state_meaning.py  situated_gap.py  target_threat.py  triadic_binding.py
experiments/: __init__.py  bench_guard.py  boundary_signal.py  ghost_integration.py  ghost_validation.py  ghost_validation_merge.py  isolate_flc_instability.py  metrics.py  run_core.py  visualize_trajectory.py
olf/: __init__.py  arbitrator.py  attractor.py  baselines.py  boundary.py  consequence_memory.py  constellation.py  events.py  flow.py  future.py  geometry.py  hierarchical_rtcm.py  invention.py  memory.py  motor.py  motor_memory.py  organism.py  prospective.py  prospective_memory.py  rtcm.py  salience.py  seeding.py  semantics.py  spm.py  transfer.py  viability.py
tests/: smoke_test.py  test_attractor.py  test_bench_guard.py  test_boundary.py  test_branching_consequence.py  test_branching_lifecycle.py  test_branching_set_control.py  test_branching_trajectories.py  test_branching_transfer.py  test_dialectical_ghosts.py  test_events.py  test_flc_ablation.py  test_flc_instability_diagnostic.py  test_future.py  test_geometry.py  test_ghost_integration.py  test_ghost_validation.py  test_policy_integrity.py  test_prospective.py  test_prospective_memory.py  test_recoupling.py  test_research_statistics.py  test_seeding.py  (+5 more)
(+29 files in other folders)
